# sentier_peakachu

./: .cruft.json  .gitignore  CHANGES.md  CONTRIBUTING.md  LocationIRI.py  README.md  el_energy_products.py  pyproject.toml
.github/workflows/: python-test.yml
conda.recipe/: meta.yaml
data/: bonsai_emission_factors.csv  bonsai_footprint_data.xlsx  iso_countries.xlsx  iso_iri_table.csv
data/Location-Services/: plci-adm1-rgn-filt.ttl  plci-adm1.ttl  with_alt_names.ttl
docs/: conf.py  environment.yaml  index.md
docs/climate_trace/: coal_ARG.xlsx  coal_AUS.xlsx  coal_BGD.xlsx  coal_BGR.xlsx  coal_BIH.xlsx  coal_BRA.xlsx  coal_BWA.xlsx  coal_CAN.xlsx  coal_CHL.xlsx  coal_CHN.xlsx  coal_COL.xlsx  coal_CZE.xlsx  coal_DEU.xlsx  coal_DNK.xlsx  coal_DOM.xlsx  coal_ESP.xlsx  coal_FIN.xlsx  coal_FRA.xlsx  coal_GBR.xlsx  coal_GRC.xlsx  coal_GTM.xlsx  coal_HKG.xlsx  coal_HND.xlsx  coal_HRV.xlsx  coal_IDN.xlsx  coal_IND.xlsx  coal_IRL.xlsx  coal_ISR.xlsx  coal_ITA.xlsx  coal_JPN.xlsx  coal_KAZ.xlsx  coal_KGZ.xlsx  coal_KHM.xlsx  coal_KOR.xlsx  coal_LAO.xlsx  coal_LKA.xlsx  coal_MAR.xlsx  coal_MEX.xlsx  coal_MKD.xlsx  coal_MMR.xlsx  (+266 more)
docs/content/: structure.md  usage.ipynb
notebooks/: Model testing-2.ipynb  bonsai_api.ipynb  build_test_ds.ipynb  chris_model_testing.ipynb  entsoe_api.ipynb  location_extractor.ipynb  test_model.ipynb  trace_import.ipynb  usage.ipynb
notebooks/Location-Services/: location_extractor.ipynb  location_network.ipynb
notebooks/Location-Services/temp/: AD.txt
notebooks/playing_around/: build_test_ds.ipynb  understandingstuff.ipynb
sentier_peakachu/: __init__.py  data.py  entsoe.py  iri_mapping.py  location_utils.py  model.py  utils_location.py  utils_time.py
tests/: __init__.py  conftest.py  test_entsoe.py
